--- a/services/templates/services/job_detail.html
+++ b/services/templates/services/job_detail.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <div class="description">
   <h1>Title: {{ job.title }}</h1>
 
     <p><strong>Description:</strong> {{ job.description }}</p>
 
-
+    </div>
 
 {% endblock %}
