--- a/services/static/css/styles.css
+++ b/services/static/css/styles.css
@@ -20,3 +20,10 @@ body {
 .navbar-collapse {
     justify-content: flex-end;
 }
+
+input[type=text], input[type=email], textarea {
+ width: 100%;
+ padding: 12px 20px;
+ margin: 8px 0;
+ display: inline-block;
+}
