--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -32,7 +32,7 @@
 				<a class="nav-link" href="{% url 'jobs' %}">All Jobs</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
+				<a class="nav-link" href="{% url 'contact' %}">Contact</a>
 			</li>
 		</ul>
 	</div>
